--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@okta/okta-signin-widget",
+  "name": "@benniehealth/okta-signing-widget",
   "description": "The Okta Sign-In Widget",
   "version": "5.4.0",
   "homepage": "https://github.com/okta/okta-signin-widget",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/okta/okta-signin-widget.git"
+    "url": "https://github.com/benniehealth/okta-signin-widget.git"
   },
   "bugs": {
     "url": "https://github.com/okta/okta-signin-widget/issues"
