--- a/package.json
+++ b/package.json
@@ -146,6 +146,7 @@
     "cross-fetch": "^3.0.4",
     "handlebars": "^4.5.3",
     "q": "1.4.1",
+    "react": "^17.0.1",
     "u2f-api-polyfill": "0.4.3",
     "underscore": "1.8.3"
   },
